--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="Nguyễn Văn Chung &amp; Cao Thị Sim">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Chung &amp; Sim Wedding">
-    <meta property="og:url" content="https://preview.iwedding.info">
+    <meta property="og:url" content="https://chungnguyen2602.github.io/chung-sim-wedding/">
     <meta property="og:description"
         content="Nguyễn Văn Chung &amp; Cao Thị Sim - Our wedding date: 2023-12-03 | Điều tuyệt vời nhất mà bạn từng học là yêu và được yêu để đáp lại">
     <meta property="og:image"
@@ -34,21 +34,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link href="./resource/css" rel="stylesheet">
     <link href="./resource/css(1)" rel="stylesheet">
+    <link href="./resource/css(1)" rel="stylesheet">
     <script type="text/javascript" async="" src="./resource/analytics.js.download"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" integrity="sha512-W/zrbCncQnky/EzL+/AYwTtosvrM+YG/V6piQLSe2HuKS6cmbw89kjYkp3tWFn1dkWV7L1ruvJyKbLz73Vlgfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css" integrity="sha512-siarrzI1u3pCqFG2LEzi87McrBmq6Tp7juVsdmGY1Dr8Saw+ZBAzDzrGwX3vgxX1NkioYNCFOVC0GpDPss10zQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/regular.min.css" integrity="sha512-rOTVxSYNb4+/vo9pLIcNAv9yQVpC8DNcFDWPoc+gTv9SLu5H8W0Dn7QA4ffLHKA0wysdo6C5iqc+2LEO1miAow==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="text/javascript" async="" src="./resource/js"></script>
+    <script src="https://kit.fontawesome.com/5a23ace85d.js" crossorigin="anonymous"></script>
     <script async="" src="./resource/js(1)"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-K9L0ZFE1PJ');</script>
     <meta http-equiv="origin-trial"
         content="AymqwRC7u88Y4JPvfIF2F37QKylC04248hLCdJAsh8xgOfe/dVJPV3XS3wLFca1ZMVOtnBfVjaCMTVudWM//5g4AAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1RoaXJkUGFydHkiOnRydWV9">
-    <link rel="prefetch" href="https://preview.iwedding.info/">
-    <link rel="prefetch" href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#wd-banner">
-    <link rel="prefetch" href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#about-us">
-    <link rel="prefetch" href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#our-story">
-    <link rel="prefetch" href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#wedding-event">
-    <link rel="prefetch" href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#imp-people">
-    <link rel="prefetch" href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#the-gallery">
-    <link rel="prefetch" href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#rsvp">
-    <link rel="prefetch" href="https://preview.iwedding.info/rsvp">
 </head>
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" class="home-3" data-new-gr-c-s-check-loaded="14.1041.0"
@@ -149,9 +146,8 @@
                                 <h3>Nguyễn Văn Chung</h3>
                                 <div class="cp-social">
                                     <ul>
-                                        <li><a href="https://facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
+                                        <li><a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -188,9 +184,8 @@
                                 <h3>Cao Thị Sim</h3>
                                 <div class="cp-social">
                                     <ul>
-                                        <li><a href="https://facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a></li>
+                                        <li><a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -226,7 +221,7 @@
             <div class="row button-accessibilities">
                 <div class="col col-lg-12">
                     <div class="text-center btn-container">
-                        <a href="https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a#rsvp"
+                        <a href="/?template=62ef3cfd4c248a18ec5a9b5a#rsvp"
                             class="accessibility-btn album btn section-button">
                             <span class="content-button">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
