--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" class="home-3" data-new-gr-c-s-check-loaded="14.1041.0"
     data-gr-ext-installed="">
-    <audio autoplay>
-        <source src="https://cdn.biihappy.com/ziiweb/wedding-musics/Perfect-EdSheeran-6445593.mp3" type="audio/mpeg">
-      </audio>
     <div class="preloader-area" style="display: none;">
         <div class="loader loader-13">
             <div class="css-heart heart1"></div>
@@ -2083,5 +2080,15 @@
             }
         }
     </style>
-    </body>
+
+
+    </div><audio src="https://cdn.biihappy.com/ziiweb/wedding-musics/Perfect-EdSheeran-6445593.mp3" controls="controls" autoplay
+        style="display: none;"></audio>
+
+    <script>
+        $(document).ready(function () {
+           
+        });
+    </script>
+
 </html>
