--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0064)https://preview.iwedding.info/?template=62ef3cfd4c248a18ec5a9b5a -->
 <html lang="en">
 
 <head>
@@ -23,7 +22,6 @@
         content="https://res.cloudinary.com/chungnguyen/image/upload/v1696603251/data/cs_wedding/xqitrmdft3hybhexudtq.jpg">
     <meta property="og:image:secure_url"
         content="https://res.cloudinary.com/chungnguyen/image/upload/v1696603251/data/cs_wedding/xqitrmdft3hybhexudtq.jpg">
-    <link rel="shortcut icon" type="image/x-icon" href="https://iwedding.info/favicon.ico">
     <link rel="stylesheet" type="text/css" href="./resource/libs.css">
     <link href="./resource/calendar.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./resource/style.css">
@@ -49,9 +47,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="text/javascript" async="" src="./resource/js"></script>
     <script async="" src="./resource/js(1)"></script>
-    <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-K9L0ZFE1PJ');</script>
-    <meta http-equiv="origin-trial"
-        content="AymqwRC7u88Y4JPvfIF2F37QKylC04248hLCdJAsh8xgOfe/dVJPV3XS3wLFca1ZMVOtnBfVjaCMTVudWM//5g4AAAB7eyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGV0YWdtYW5hZ2VyLmNvbTo0NDMiLCJmZWF0dXJlIjoiUHJpdmFjeVNhbmRib3hBZHNBUElzIiwiZXhwaXJ5IjoxNjk1MTY3OTk5LCJpc1RoaXJkUGFydHkiOnRydWV9">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" class="home-3" data-new-gr-c-s-check-loaded="14.1041.0"
@@ -285,7 +282,7 @@
                             <div class="col-sm-6 col-xs-12">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="./resource/0f99c255f7aa7714d366ebde51c86d53.jpeg" alt="">
+                                        <img src="./lb/MIN_6403.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -333,7 +330,7 @@
                             <div class="col-sm-6 col-xs-12">
                                 <div class="story-lt-rt story-rt">
                                     <div class="image-story">
-                                        <img src="./resource/be48dcf2522cd4ecfa7dab2dd4ebd3f9.jpeg" alt="">
+                                        <img src="./lb/MIN_6383.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -344,7 +341,7 @@
                             <div class="col-sm-6 col-xs-12">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="./resource/d2d08234dd0ece24828f396fa243a1ec.jpeg" alt="">
+                                        <img src="./lb/MIN_6370_1.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -391,7 +388,7 @@
                             <div class="col-sm-6 col-xs-12">
                                 <div class="story-lt-rt story-rt">
                                     <div class="image-story">
-                                        <img src="./resource/d37c077f9ad6b076bc531b2d6ba44498.jpeg" alt="">
+                                        <img src="./lb/MIN_5510.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -424,7 +421,7 @@
                             <div class="col-sm-6 col-xs-6">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="./resource/0f99c255f7aa7714d366ebde51c86d53.jpeg" alt="">
+                                        <img src="./lb/MIN_6403.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -454,7 +451,7 @@
                             <div class="col-sm-6 col-xs-6">
                                 <div class="story-lt-rt story-rt">
                                     <div class="image-story">
-                                        <img src="./resource/be48dcf2522cd4ecfa7dab2dd4ebd3f9.jpeg" alt="">
+                                        <img src="./lb/MIN_6383.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -484,7 +481,7 @@
                             <div class="col-sm-6 col-xs-6">
                                 <div class="story-lt-rt story-lt">
                                     <div class="image-story">
-                                        <img src="./resource/d2d08234dd0ece24828f396fa243a1ec.jpeg" alt="">
+                                        <img src="./lb/MIN_6370_1.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -513,7 +510,7 @@
                             <div class="col-sm-6 col-xs-6">
                                 <div class="story-lt-rt story-rt">
                                     <div class="image-story">
-                                        <img src="./resource/d37c077f9ad6b076bc531b2d6ba44498.jpeg" alt="">
+                                        <img src="./lb/MIN_5510.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -525,7 +522,7 @@
     </section>
 
     <section id="the-countdown" class="the-countdown layered-b section-padding"
-        style="background-image: url(https://cdn.biihappy.com/ziiweb/default/template/62ef3cfd4c248a18ec5a9b5a/a92c4f18902576f825fb27a0894ec3f9.jpg); background-repeat: no-repeat;background-size: cover;background-attachment: fixed">
+        style="background-image: url('./lb/MIN_6335_1.jpg'); background-repeat: no-repeat;background-size: cover;background-attachment: fixed">
         <div class="seperator seperator-up">
             <img src="./resource/layer-3.png" alt="seperator">
         </div>
@@ -583,7 +580,7 @@
                         <div class="banner-event">
                             <div class="event-img wow fadeInLeft sticky"
                                 style="visibility: hidden; animation-name: none; position: absolute; top: 0px; bottom: auto;">
-                                <img src="./resource/8cf390dccd7f841cc2fea94f1f2ad7a1.jpg" alt="">
+                                <img src="./lb/MIN_6155.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -814,7 +811,7 @@
 
 
     <section id="the-quote" class="the-quote layered-b section-padding"
-        style="background-image: url(https://cdn.biihappy.com/ziiweb/default/template/62ef3cfd4c248a18ec5a9b5a/7a1b7d126a1a5e786da21159f9cae0a7.jpg); background-repeat: no-repeat;background-size: cover;background-attachment: fixed">
+        style="background-image: url('./lb/MIN_5830_1.jpg'); background-repeat: no-repeat;background-size: cover;background-attachment: fixed">
         <div class="seperator seperator-up">
             <img src="./resource/layer-3.png" alt="seperator">
         </div>
@@ -823,7 +820,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="quote-img">
-                        <img src="./resource/c5fc9d51b7ebacb2f09c9a69f29635a0.jpg">
+                        <img src="./lb/MIN_5301.jpg">
                     </div>
                 </div>
                 <div class="col-sm-8 col-xs-12">
@@ -851,9 +848,8 @@
             <div class="row masonry-gallery" style="position: relative; height: 2042.56px;">
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item" style="position: absolute; left: 0%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/61990296d7e97a1853119579/large.jpg"
-                            title="">
-                            <img src="./resource/small.jpg" alt="">
+                        <a href="./lb/MIN_5301.jpg" title="">
+                            <img src="./lb/MIN_5301.jpg" alt="">
                             <i class="fa fa-search"></i>
                         </a>
                     </div>
@@ -861,13 +857,103 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="https://cdn.biihappy.com/ziiweb/default/website/galleries/619902a5f7c65c763d2ef0e2/large.jpg"
-                            title="">
-                            <img src="./resource/small(1).jpg" alt="">
+                        <a href="./lb/MIN_5320.jpg" title="">
+                            <img src="./lb/MIN_5320.jpg" alt="">
                             <i class="fa fa-search"></i>
                         </a>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5323.jpg" title="">
+                            <img src="./lb/MIN_5323.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5334.jpg" title="">
+                            <img src="./lb/MIN_5334.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5341.jpg" title="">
+                            <img src="./lb/MIN_5341.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5356.jpg" title="">
+                            <img src="./lb/MIN_5356.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5367.jpg" title="">
+                            <img src="./lb/MIN_5367.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5374.jpg" title="">
+                            <img src="./lb/MIN_5374.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5396.jpg" title="">
+                            <img src="./lb/MIN_5396.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5411.jpg" title="">
+                            <img src="./lb/MIN_5411.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5462.jpg" title="">
+                            <img src="./lb/MIN_5462.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./lb/MIN_5510.jpg" title="">
+                            <img src="./lb/MIN_5510.jpg" alt="">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- 
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 66.6667%; top: 0px;">
                     <div class="item port-popup">
@@ -966,7 +1052,7 @@
                             <i class="fa fa-search"></i>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -1879,7 +1965,7 @@
     </section>
 
     <footer id="footer" class="footer-widgets"
-        style="background-image: url(https://cdn.biihappy.com/ziiweb/default/template/62ef3cfd4c248a18ec5a9b5a/dbf9fcd0502b5ed50f22812271a56402.jpg);background-repeat: no-repeat;background-size: cover;background-position: bottom;background-attachment: fixed;width:100%">
+        style="background-image: url(./lb/MIN_5860_1.jpg);background-repeat: no-repeat;background-size: cover;background-position: bottom;background-attachment: fixed;width:100%">
         <div class="footer-note">
             <h1>Thanh you!</h1>
             <p>Chung &amp; Sim</p>
@@ -2082,12 +2168,12 @@
     </style>
 
 
-    </div><audio src="https://cdn.biihappy.com/ziiweb/wedding-musics/Perfect-EdSheeran-6445593.mp3" controls="controls" autoplay
-        style="display: none;"></audio>
+    </div><audio src="https://cdn.biihappy.com/ziiweb/wedding-musics/Perfect-EdSheeran-6445593.mp3" controls="controls"
+        autoplay style="display: none;"></audio>
 
     <script>
         $(document).ready(function () {
-           
+
         });
     </script>
 
