--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
     </section>
 
-    <section class="section-accessibilities">
+    <!-- <section class="section-accessibilities">
         <div class="container">
             <div class="row button-accessibilities">
                 <div class="col col-lg-12">
@@ -268,7 +268,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="our-story" class="story-bg section-padding">
         <div class="container">
@@ -599,12 +599,12 @@
                                         <ul>
                                             <li class="text-center"><i class="fa fa-calendar-check-o"></i>2023-12-02
                                             </li>
-                                            <li class="text-center"><i class="fa fa-clock-o"></i> 05:00 PM</li>
+                                            <li class="text-center"><i class="fa fa-clock-o"></i> 03:00 PM</li>
                                         </ul>
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nữ</p>
                                     <a class="text-center-sm"
-                                        href="https://www.google.com/maps/place/Da+Nang,+H%E1%BA%A3i+Ch%C3%A2u+District,+Da+Nang,+Vietnam/@16.0471659,108.1716864,13z/data=!3m1!4b1!4m5!3m4!1s0x314219c792252a13:0xfc14e3a044436487!8m2!3d16.0544068!4d108.2021667"
+                                        href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
 
@@ -629,7 +629,7 @@
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nữ</p>
                                     <a class="text-center-sm"
-                                        href="https://www.google.com/maps/place/Da+Nang,+H%E1%BA%A3i+Ch%C3%A2u+District,+Da+Nang,+Vietnam/@16.0471659,108.1716864,13z/data=!3m1!4b1!4m5!3m4!1s0x314219c792252a13:0xfc14e3a044436487!8m2!3d16.0544068!4d108.2021667"
+                                        href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
 
@@ -652,9 +652,9 @@
                                             <li class="text-center"><i class="fa fa-clock-o"></i> 10:00 AM</li>
                                         </ul>
                                     </div>
-                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nam</p>
+                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nữ</p>
                                     <a class="text-center-sm"
-                                        href="https://www.google.com/maps/place/Da+Nang,+H%E1%BA%A3i+Ch%C3%A2u+District,+Da+Nang,+Vietnam/@16.0471659,108.1716864,13z/data=!3m1!4b1!4m5!3m4!1s0x314219c792252a13:0xfc14e3a044436487!8m2!3d16.0544068!4d108.2021667"
+                                        href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-7">
@@ -667,7 +667,7 @@
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nam</p>
                                     <a class="text-center-sm"
-                                        href="https://www.google.com/maps/place/Da+Nang,+H%E1%BA%A3i+Ch%C3%A2u+District,+Da+Nang,+Vietnam/@16.0471659,108.1716864,13z/data=!3m1!4b1!4m5!3m4!1s0x314219c792252a13:0xfc14e3a044436487!8m2!3d16.0544068!4d108.2021667"
+                                        href="https://maps.app.goo.gl/TV6UdZ8fZ9ja7fwY9"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
                             </div>
@@ -826,7 +826,7 @@
         </div>
     </section>
 
-    <section id="xntd" class="rsvp">
+    <!-- <section id="xntd" class="rsvp">
         <div class="rsvp-widgets">
             <div class="section-title wow fadeInDown" style="visibility: hidden; animation-name: none;">
                 <h2>Xác nhận tham dự</h2>
@@ -1032,7 +1032,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="hmc" class="rsvp">
         <div class="rsvp-widgets">
@@ -1046,16 +1046,16 @@
                             <div class="donate-box">
                                 <div class="donate-card">
                                     <h3 style="text-align: center;">Mừng cưới đến chú rể</h3>
-                                    <img class="qr-code-image" src="./resource/49bc348db7eb284d9fc249b9d958893b.jpeg">
+                                    <img class="qr-code-image" src="./resource/ChungBank.png">
                                     <p>Ngân hàng: <strong>TPBank</strong></p>
                                     <p>Số tài khoản: <strong>90964303637</strong></p>
                                     <p>Tên tài khoản: <strong>Nguyễn Văn Chung</strong></p>
                                 </div>
                                 <div class="donate-card">
                                     <h3 style="text-align: center;">Mừng cưới đến cô dâu</h3>
-                                    <img class="qr-code-image" src="./resource/24343a45a211dedc5b1b0b57300eaba9.jpeg">
-                                    <p>Ngân hàng: <strong>VPBank</strong></p>
-                                    <p>Số tài khoản: <strong>12345678910</strong></p>
+                                    <img class="qr-code-image" src="./resource/SimBank.png">
+                                    <p>Ngân hàng: <strong>VCBank</strong></p>
+                                    <p>Số tài khoản: <strong>0181003526341</strong></p>
                                     <p>Tên tài khoản: <strong>Cao Thị Sim</strong></p>
                                 </div>
                             </div>
