--- a/index.html
+++ b/index.html
@@ -709,8 +709,8 @@
             <div class="row masonry-gallery" style="position: relative; height: 2042.56px;">
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item" style="position: absolute; left: 0%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_5301.jpg" title="">
-                            <img src="./lb/MIN_5301.jpg" alt="">
+                        <a href="./album/MIN_5341.jpg" title="">
+                            <img src="./album/MIN_5341.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -718,8 +718,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_5323.jpg" title="">
-                            <img src="./lb/MIN_5323.jpg" alt="">
+                        <a href="./album/MIN_5367.jpg" title="">
+                            <img src="./album/MIN_5367.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -727,8 +727,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_6155.jpg" title="">
-                            <img src="./lb/MIN_6155.jpg" alt="">
+                        <a href="./album/MIN_5462.jpg" title="">
+                            <img src="./album/MIN_5462.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -736,8 +736,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_6352.jpg" title="">
-                            <img src="./lb/MIN_6352.jpg" alt="">
+                        <a href="./album/MIN_5719.jpg" title="">
+                            <img src="./album/MIN_5719.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -745,8 +745,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_5341.jpg" title="">
-                            <img src="./lb/MIN_5341.jpg" alt="">
+                        <a href="./album/MIN_5751.jpg" title="">
+                            <img src="./album/MIN_5751.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -754,8 +754,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_5830.jpg" title="">
-                            <img src="./lb/MIN_5830.jpg" alt="">
+                        <a href="./album/MIN_5835.jpg" title="">
+                            <img src="./album/MIN_5835.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -763,8 +763,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_5367.jpg" title="">
-                            <img src="./lb/MIN_5367.jpg" alt="">
+                        <a href="./album/MIN_6082.jpg" title="">
+                            <img src="./album/MIN_6082.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -772,8 +772,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_5374.jpg" title="">
-                            <img src="./lb/MIN_5374.jpg" alt="">
+                        <a href="./album/MIN_6155.jpg" title="">
+                            <img src="./album/MIN_6155.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
@@ -781,12 +781,49 @@
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
-                        <a href="./lb/MIN_5396.jpg" title="">
-                            <img src="./lb/MIN_5396.jpg" alt="">
+                        <a href="./album/MIN_6209.jpg" title="">
+                            <img src="./album/MIN_6209.jpg" alt="">
                             <i class="fa fa-search-plus"></i>
                         </a>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./album/MIN_6298.jpg" title="">
+                            <img src="./album/MIN_6298.jpg" alt="">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./album/MIN_6335.jpg" title="">
+                            <img src="./album/MIN_6335.jpg" alt="">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./album/MIN_6352.jpg" title="">
+                            <img src="./album/MIN_6352.jpg" alt="">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
+                    style="position: absolute; left: 33.3333%; top: 0px;">
+                    <div class="item port-popup">
+                        <a href="./album/MIN_6460.jpg" title="">
+                            <img src="./album/MIN_6460.jpg" alt="">
+                            <i class="fa fa-search-plus"></i>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="col-md-4 col-sm-6 col-xs-6 mix grid-item"
                     style="position: absolute; left: 33.3333%; top: 0px;">
                     <div class="item port-popup">
@@ -832,14 +869,14 @@
                                     <h3 style="text-align: center;">Mừng cưới đến chú rể</h3>
                                     <img class="qr-code-image" src="./resource/ChungBank.png">
                                     <p>Ngân hàng: <strong>TPBank</strong></p>
-                                    <p>Số tài khoản: <strong>90964303637</strong></p>
+                                    <p>Số tài khoản: <span style="font-weight: bold;">90964303637</span></p>
                                     <p>Tên tài khoản: <strong>Nguyễn Văn Chung</strong></p>
                                 </div>
                                 <div class="donate-card">
                                     <h3 style="text-align: center;">Mừng cưới đến cô dâu</h3>
                                     <img class="qr-code-image" src="./resource/SimBank.png">
-                                    <p>Ngân hàng: <strong>VCBank</strong></p>
-                                    <p>Số tài khoản: <strong>0181003526341</strong></p>
+                                    <p>Ngân hàng: <span>VietcomBank</span></p>
+                                    <p>Số tài khoản: <span style="font-weight: bold;">0181003526341</span></p>
                                     <p>Tên tài khoản: <strong>Cao Thị Sim</strong></p>
                                 </div>
                             </div>
@@ -851,7 +888,7 @@
     </section>
 
     <footer id="footer" class="footer-widgets"
-        style="background-image: url(./lb/MIN_5860_1.jpg);background-repeat: no-repeat;background-size: cover;background-position: bottom;background-attachment: fixed;width:100%">
+        style="background-image: url(./lb/MIN_5860_1.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;background-attachment: fixed;width:100%">
         <div class="footer-note">
             <h1>Thanh you!</h1>
             <p>Chung &amp; Sim</p>
@@ -886,20 +923,18 @@
             <div class="donate-modal-body">
                 <div class="donate-box">
                     <div class="donate-card">
-                        <h3>Mừng cưới đến chú rể</h3>
-                        <img class="qr-code-image" src="./resource/49bc348db7eb284d9fc249b9d958893b.jpeg">
-                        <p>Ngân hàng: <strong>VPBank</strong></p>
-                        <p>Tên tài khoản: <strong>12345678910</strong></p>
-                        <p>Số tài khoản: <strong>Nguyễn Văn Chung</strong></p>
-                        <p>Chi nhánh: <strong>TP.HCM</strong></p>
+                        <h3 style="text-align: center;">Mừng cưới đến chú rể</h3>
+                        <img class="qr-code-image" src="./resource/ChungBank.png">
+                        <p>Ngân hàng: <strong>TPBank</strong></p>
+                        <p>Số tài khoản: <strong>90964303637</strong></p>
+                        <p>Tên tài khoản: <strong>Nguyễn Văn Chung</strong></p>
                     </div>
                     <div class="donate-card">
-                        <h3>Mừng cưới đến cô dâu</h3>
-                        <img class="qr-code-image" src="./resource/24343a45a211dedc5b1b0b57300eaba9.jpeg">
-                        <p>Ngân hàng: <strong>VPBank</strong></p>
-                        <p>Tên tài khoản: <strong>12345678910</strong></p>
-                        <p>Số tài khoản: <strong>Cao Thị Sim</strong></p>
-                        <p>Chi nhánh: <strong>TP.HCM</strong></p>
+                        <h3 style="text-align: center;">Mừng cưới đến cô dâu</h3>
+                        <img class="qr-code-image" src="./resource/SimBank.png">
+                        <p>Ngân hàng: <strong>VCBank</strong></p>
+                        <p>Số tài khoản: <strong>0181003526341</strong></p>
+                        <p>Tên tài khoản: <strong>Cao Thị Sim</strong></p>
                     </div>
                 </div>
             </div>
