--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                                 <h3>Nguyễn Văn Chung</h3>
                                 <div class="cp-social">
                                     <ul>
-                                        <li><a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                                        <li><a href="https://www.facebook.com/chungnguyen2602"><i class="fa-brands fa-facebook"></i></a>
                                         </li>
-                                        <li><a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                                        <li><a href="https://www.facebook.com/chungnguyen2602"><i class="fa-brands fa-instagram"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -163,12 +163,6 @@
                                     <div class="parent-info"><span class="parent-title">Con bà:</span> <span
                                             class="parent-name">TRỊNH THỊ THÁI</span></div>
                                 </div>
-                                <!-- <p class="ar">Là bác sĩ nha khoa hiện đang công tác tại một phòng khám nha khoa ở Quận 1
-                                    thành phồ Hồ Chí Minh. Là...<a class="button-see" data-toggle="popover"
-                                        data-placement="bottom"
-                                        data-content="Là bác sĩ nha khoa hiện đang công tác tại một phòng khám nha khoa ở Quận 1 thành phồ Hồ Chí Minh. Là một người hiền lành và ít nói. Luôn coi trọng tình cảm và yêu thương gia đình. Với anh: “Gia đình là điểm tựa vững chắc nhất và là bến đỗ bình yên không đâu sánh bằng đối với mỗi con người. Đó luôn là nơi tràn ngập tình yêu thương để ta trở về.”"
-                                        style="font-size:14px;cursor: pointer" data-original-title="" title="">Xem
-                                        thêm<i class="bi bi-arrow-down-short"></i></a></p> -->
                             </div>
                         </div>
                     </div>
@@ -185,9 +179,9 @@
                                 <h3>Cao Thị Sim</h3>
                                 <div class="cp-social">
                                     <ul>
-                                        <li><a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                                        <li><a href="https://www.facebook.com/xu.xu.3110567"><i class="fa-brands fa-facebook"></i></a>
                                         </li>
-                                        <li><a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                                        <li><a href="https://www.facebook.com/xu.xu.3110567"><i class="fa-brands fa-instagram"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -203,12 +197,6 @@
                                     <div class="parent-info"><span class="parent-title">Con bà:</span> <span
                                             class="parent-name">MAI THỊ XUYẾN</span></div>
                                 </div>
-                                <!-- <p class="al">Cô gái đến từ xứ Huế mộng mơ, hiện đang sinh sống và làm việc tại Sài Gòn.
-                                    Sau khi tốt nghiệp Học vi...<a class="button-see" data-toggle="popover"
-                                        data-placement="bottom"
-                                        data-content="Cô gái đến từ xứ Huế mộng mơ, hiện đang sinh sống và làm việc tại Sài Gòn. Sau khi tốt nghiệp Học viện Báo chí và Tuyên truyền, quyết tâm theo đuổi đam mê làm phóng viên du lịch. Là một người hay cười nhưng lại sống nội tâm, thích đọc sách, trồng cây và yêu thiên nhiên. Ngoài ra còn rất thích vẽ vời, nuôi mèo và nuôi ước mơ có cho mình một vườn hồng khoe sắc."
-                                        style="font-size:14px;cursor: pointer" data-original-title="" title="">Xem
-                                        thêm<i class="bi bi-arrow-down-short"></i></a></p> -->
                             </div>
                         </div>
                     </div>
@@ -218,57 +206,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section class="section-accessibilities">
-        <div class="container">
-            <div class="row button-accessibilities">
-                <div class="col col-lg-12">
-                    <div class="text-center btn-container">
-                        <a href="/?template=62ef3cfd4c248a18ec5a9b5a#rsvp"
-                            class="accessibility-btn album btn section-button">
-                            <span class="content-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-chat" viewBox="0 0 16 16">
-                                    <path
-                                        d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z">
-                                    </path>
-                                </svg>
-                                Gửi lời chúc
-                            </span>
-                        </a>
-                        <a href="/?template=62ef3cfd4c248a18ec5a9b5a#xntd" target="_blank"
-                            class="accessibility-btn album btn section-button">
-                            <span class="content-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-send" viewBox="0 0 16 16">
-                                    <path
-                                        d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z">
-                                    </path>
-                                </svg>
-                                Xác nhận tham dự
-                            </span>
-                        </a>
-                        <a href="javascript:void(0)" class="accessibility-btn album btn section-button buttonDonate">
-                            <span class="content-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-coin" viewBox="0 0 16 16">
-                                    <path
-                                        d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9H5.5zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518l.087.02z">
-                                    </path>
-                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z">
-                                    </path>
-                                    <path
-                                        d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12z">
-                                    </path>
-                                </svg>
-                                Mừng cưới
-                            </span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <section id="our-story" class="story-bg section-padding">
         <div class="container">
@@ -356,8 +293,8 @@
                                         </div>
                                         <p class="wow fadeInRight"
                                             style="visibility: visible; animation-name: fadeInRight;">10 năm qua đi với
-                                            biết bao cung
-                                            bậc cảm xúc, yêu mãnh liệt có, giận hờn có, thậm chí đôi lúc cảm thấy chán
+                                            biết bao cung bậc cảm xúc, yêu mãnh liệt có, giận hờn có, thậm chí đôi lúc
+                                            cảm thấy chán
                                             đối phương tới mức muốn buông tay. Ấy vậy mà bằng một thế lực vô hình nào
                                             đó, chúng ta vẫn nắm tay nhau và sắp bước qua một cánh cửa mới của cuộc đời,
                                             viết tiếp câu chuyện tình yêu tuổi 27 mà bao người nghĩ nó sẽ dang dở.</p>
@@ -602,7 +539,7 @@
                                             <li class="text-center"><i class="fa fa-clock-o"></i> 03:00 PM</li>
                                         </ul>
                                     </div>
-                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nữ</p>
+                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
                                     <a class="text-center-sm" href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
@@ -625,7 +562,7 @@
                                             <li class="text-center"><i class="fa fa-clock-o"></i> 09:00 AM</li>
                                         </ul>
                                     </div>
-                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nữ</p>
+                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
                                     <a class="text-center-sm" href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
@@ -648,7 +585,7 @@
                                             <li class="text-center"><i class="fa fa-clock-o"></i> 10:00 AM</li>
                                         </ul>
                                     </div>
-                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà nữ</p>
+                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
                                     <a class="text-center-sm" href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
@@ -871,6 +808,7 @@
                                     <p>Ngân hàng: <strong>TPBank</strong></p>
                                     <p>Số tài khoản: <span style="font-weight: bold;">90964303637</span></p>
                                     <p>Tên tài khoản: <strong>Nguyễn Văn Chung</strong></p>
+                                    <p>Số điện thoại: <strong>0964303637</strong></p>
                                 </div>
                                 <div class="donate-card">
                                     <h3 style="text-align: center;">Mừng cưới đến cô dâu</h3>
@@ -878,6 +816,7 @@
                                     <p>Ngân hàng: <span>VietcomBank</span></p>
                                     <p>Số tài khoản: <span style="font-weight: bold;">0181003526341</span></p>
                                     <p>Tên tài khoản: <strong>Cao Thị Sim</strong></p>
+                                    <p>Số điện thoại: <strong>0375620367</strong></p>
                                 </div>
                             </div>
                         </div>
