--- a/index.html
+++ b/index.html
@@ -806,9 +806,9 @@
                                     <h3 style="text-align: center;">Mừng cưới đến chú rể</h3>
                                     <img class="qr-code-image" src="./resource/ChungBank.png">
                                     <p>Ngân hàng: <strong>TPBank</strong></p>
-                                    <p>Số tài khoản: <span style="font-weight: bold;">90964303637</span></p>
+                                    <p>Số tài khoản: <span style="font-weight: bold;">90964.303.637</span></p>
                                     <p>Tên tài khoản: <strong>Nguyễn Văn Chung</strong></p>
-                                    <p>Số điện thoại: <strong>0964303637</strong></p>
+                                    <p>Số điện thoại: <strong>0964.303.637</strong></p>
                                 </div>
                                 <div class="donate-card">
                                     <h3 style="text-align: center;">Mừng cưới đến cô dâu</h3>
@@ -816,7 +816,7 @@
                                     <p>Ngân hàng: <span>VietcomBank</span></p>
                                     <p>Số tài khoản: <span style="font-weight: bold;">0181003526341</span></p>
                                     <p>Tên tài khoản: <strong>Cao Thị Sim</strong></p>
-                                    <p>Số điện thoại: <strong>0375620367</strong></p>
+                                    <p>Số điện thoại: <strong>0375.620.367</strong></p>
                                 </div>
                             </div>
                         </div>
