--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
                                         <div class="story-head wow fadeIn"
                                             style="visibility: visible; animation-name: fadeIn;">
                                             <h3>Tình yêu tuổi 17</h3>
-                                            <!-- <h6>April 22 2013</h6> -->
                                         </div>
                                         <p class="wow fadeInRight"
                                             style="visibility: visible; animation-name: fadeInRight;">Người ta thường
@@ -814,7 +813,7 @@
                                     <h3 style="text-align: center;">Mừng cưới đến cô dâu</h3>
                                     <img class="qr-code-image" src="./resource/SimBank.png">
                                     <p>Ngân hàng: <span>VietcomBank</span></p>
-                                    <p>Số tài khoản: <span style="font-weight: bold;">0181003526341</span></p>
+                                    <p>Số tài khoản: <span style="font-weight: bold;">0181.0035.26341</span></p>
                                     <p>Tên tài khoản: <strong>Cao Thị Sim</strong></p>
                                     <p>Số điện thoại: <strong>0375.620.367</strong></p>
                                 </div>
